--- a/app/src/main/res/layout/activity_recipe_result.xml
+++ b/app/src/main/res/layout/activity_recipe_result.xml
@@ -32,10 +32,12 @@
     <!-- Navigation Bar Container -->
     <FrameLayout
         android:id="@+id/navigationBarContainer"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:elevation="8dp">
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <include
             layout="@layout/navigation_bar"
