--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,8 +43,8 @@
         android:layout_height="120dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/profile_pic"
-        app:civ_border_color="@android:color/white"
-        app:civ_border_width="2dp"
+        app:strokeColor="@android:color/white"
+        app:strokeWidth="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
