--- a/app/src/main/res/layout/activity_glucose_history.xml
+++ b/app/src/main/res/layout/activity_glucose_history.xml
@@ -1,7 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GlucoseHistory">
@@ -22,68 +24,69 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Track Glucose"
-        android:fontFamily="@font/poppins_medium"
-        android:textSize="16sp"
         android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/imageView9"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Track Glucose"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/imageView9"
-        app:layout_constraintStart_toEndOf="@id/imageView9" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.018"
+        app:layout_constraintStart_toEndOf="@id/imageView9"
+        app:layout_constraintTop_toTopOf="@id/imageView9"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <!-- Filter + Toggle Row -->
-    <LinearLayout
-        android:id="@+id/buttonRow"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/filterButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:text="Filter by Month"
+        android:fontFamily="@font/poppins_medium"
+        android:backgroundTint="@android:color/white"
+        android:textColor="@android:color/black"
+        android:background="@drawable/filter_button_bg"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:layout_marginTop="16dp"
-        android:paddingHorizontal="16dp"
         app:layout_constraintTop_toBottomOf="@id/imageView9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <Button
-            android:id="@+id/filterButton"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Filter by Month"
-            android:textColor="#0468FF"
-            style="?android:attr/buttonBarButtonStyle" />
-
-        <Button
-            android:id="@+id/todayButton"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Today"
-            android:background="@android:color/white"
-            android:textColor="#0468FF"
-            android:fontFamily="@font/poppins_medium"
-            style="?android:attr/buttonBarButtonStyle" />
-
-        <Button
-            android:id="@+id/historyButton"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="History"
-            android:background="@android:color/white"
-            android:textColor="#0468FF"
-            android:fontFamily="@font/poppins_medium"
-            style="?android:attr/buttonBarButtonStyle" />
-    </LinearLayout>
+        android:layout_marginStart="16dp" />
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/glucoseRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/buttonRow"
+        android:clipToPadding="false"
+        android:paddingTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/filterButton" />
+
+    <Button
+        android:id="@+id/todayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="72dp"
+        android:text="Today"
+        app:layout_constraintBottom_toTopOf="@+id/glucoseRecyclerView"
+        app:layout_constraintStart_toEndOf="@+id/filterButton"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/historyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="73dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="1dp"
+        android:text="History"
+        app:layout_constraintBottom_toTopOf="@+id/glucoseRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/todayButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
